Found a Model that works for free (doesn't require an attached credit card) and changed overflow to auto (from scroll) so there are no longer 2 useless scoll bars on the screen.

--- a/Code/example/example-app/app/global.css
+++ b/Code/example/example-app/app/global.css
@@ -34,7 +34,7 @@ section.populated {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .starter-text {
